new changes committed

--- a/angular/tpl/blocks/desktop/header.html
+++ b/angular/tpl/blocks/desktop/header.html
@@ -124,14 +124,8 @@
     <i class="fa fa-spinner fa-pulse fa-5x fa-fw"></i>
 </div> 
 
-<!-- <style type="text/css">
-    .broadcastmodal .ng-confirm-content-pane {
-        min-height: 700px;
-    }.broadcastmodal .ng-confirm-title-c{
-        display: none!important;
-    }.broadcastmodal .ui-select-match{
+<style type="text/css">
+    .custom-modal .ui-select-bootstrap .selected-item .ng-hide,.custom-modal .ui-select-bootstrap .selected-item{
         display: block!important;
-    }.broadcastmodal .control-label{
-        text-align: left!important;
     }
-</style> -->
+</style>
