--- a/angular/tpl/blocks/desktop/rightmenu.html
+++ b/angular/tpl/blocks/desktop/rightmenu.html
@@ -195,7 +195,7 @@
                 </div>
             </div>
 
-            <div class="msg-post">
+            <div class="msg-post"  ui-sref="app.chats">
                 <svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" width="30" height="30" viewBox="0 0 30 30">
                             <defs>
                                 <clipPath id="clip-path">
