--- a/angular/tpl/blocks/modals/collaborateModal.html
+++ b/angular/tpl/blocks/modals/collaborateModal.html
@@ -129,9 +129,8 @@
                                 <label class="control-label">Deadline</label>
                                 <datepicker date-format="yyyy-MM-dd" selector="form-control">
                                     <div class="input-group">
-                                        <span class="input-group-addon" style="cursor: pointer">
-                                        <i class="fa fa-lg fa-calendar"></i>
-                                    </span>
+                                        <span class="input-group-addon">
+                                        <i class="fa fa-lg fa-calendar"></i></span>
                                         <input type="text" class="form-control" placeholder="Deadline" ng-model='formData.projectdeadline' ng-disabled="!formData.type" name="deadline" required />
 
                                     </div>
