--- a/angular/tpl/desktop/friends.html
+++ b/angular/tpl/desktop/friends.html
@@ -70,7 +70,7 @@
                                 </div>
                                 <div class="rewards-right">
                                     <span class="count"><img ng-src="{{IMGURL}}{{friend.xprank.icon}}" class="rank-icon"/></span>
-                                    <span class="title">Rank</span>
+                                    <span class="title">{{friend.xprank.rankname}}</span>
                                 </div>
                             </div>
                         </div>
