--- a/angular/tpl/desktop/wishlist.html
+++ b/angular/tpl/desktop/wishlist.html
@@ -36,12 +36,12 @@
             </div>
         </div>
         <div class="row mt-15">
-            <div class="col-lg-3 col-md-3 col-xs-12 col-sm-4" dir-paginate="(key,data) in wishedproducts.data | itemsPerPage: totalPerPage" total-items="wishedproducts.total" current-page="pagination.current">
+            <div ng-class="slidecount < 4 ? 'col-lg-4 col-md-4 col-sm-4' : 'col-lg-3 col-md-3 col-sm-3'" class="col-xs-12" dir-paginate="(key,data) in wishedproducts.data | itemsPerPage: totalPerPage" total-items="wishedproducts.total" current-page="pagination.current">
                 <div class="card">
                     <div class="card-img" background-image="{{data.product.images[0].filetype == 1 ? IMGURL:''}}{{data.product.images[0].thumbnail}}" ui-sref="app.viewitem({id:data.product.id})">
                     </div>
                     <div class="card-content">
-                        <h4 class="word-line" ui-sref="app.viewitem({id:data.product.id})">{{data.product.title | cut:true:15:'...'}}</h4>
+                        <h4 class="word-line" ui-sref="app.viewitem({id:data.product.id})">{{data.product.title}}</h4>
                         <div class="card-info">
                             <span class="price">{{data.product.price ? '$' + data.product.price: 'Free'}}</span>
                             <span class="price-sub" ng-if="data.product.price > 0 && data.product.type!='Shop' && data.product.periodtype">Per {{data.product.periodtype}}</span>
