--- a/angular/tpl/desktop/usermain.html
+++ b/angular/tpl/desktop/usermain.html
@@ -114,6 +114,9 @@
                                             <a title="Add to Cart" ng-if="data.owner.id!=user.id" ng-click="addTocart(data.id)"><i class="fa fa-plus"></i></a>
                                             <a title="Share to Earn" ng-click="sharetosocial(data)"><i class="fa fa-share"></i></a>
                                         </div>
+                                        <div class="hover-icon active" ng-if="data.is_request">
+                                            <i class="fa fa-bookmark"></i>
+                                        </div>
                                     </div>
                                 </div>
                             </slick>
@@ -276,6 +279,9 @@
                                         <a title="Add to Wishlist" ng-click="updatewishstatus(data,'event',key)" ng-if="data.owner.id!=user.id"><i class="fa fa-heart" ng-class="{'primary': data.wishstatus == 1}"></i></a>
                                         <a title="Add to Cart" ng-if="data.owner.id!=user.id" ng-click="addTocart(data.id)"><i class="fa fa-plus"></i></a>
                                         <a title="Share to Earn" ng-click="sharetosocial(data)"><i class="fa fa-share"></i></a>
+                                    </div>
+                                    <div class="hover-icon active" ng-if="data.is_request && data.type == 'Service'">
+                                        <i class="fa fa-bookmark"></i>
                                     </div>
                                 </div>
                             </div>
