new changes added

--- a/angular/tpl/desktop/usermain.html
+++ b/angular/tpl/desktop/usermain.html
@@ -110,7 +110,7 @@
                                             </div>
                                         </div>
                                         <div class="card-footer">
-                                            <a title="Add to Wishlist" ng-click="updatewishstatus(data,'event',key)" ng-if="data.owner.id!=user.id"><i class="fa fa-heart" ng-class="{'primary': data.wishstatus == 1}"></i></a>
+                                            <a title="Add to Wishlist" ng-click="updatewishstatus(data,'service',key)" ng-if="data.owner.id!=user.id"><i class="fa fa-heart" ng-class="{'primary': data.wishstatus == 1}"></i></a>
                                             <a title="Add to Cart" ng-if="data.owner.id!=user.id" ng-click="addTocart(data.id)"><i class="fa fa-plus"></i></a>
                                             <a title="Share to Earn" ng-click="sharetosocial(data)"><i class="fa fa-share"></i></a>
                                         </div>
@@ -153,7 +153,7 @@
                                             </div>
                                         </div>
                                         <div class="card-footer">
-                                            <a title="Add to Wishlist" ng-click="updatewishstatus(data,'event',key)" ng-if="data.owner.id!=user.id"><i class="fa fa-heart" ng-class="{'primary': data.wishstatus == 1}"></i></a>
+                                            <a title="Add to Wishlist" ng-click="updatewishstatus(data,'shop',key)" ng-if="data.owner.id!=user.id"><i class="fa fa-heart" ng-class="{'primary': data.wishstatus == 1}"></i></a>
                                             <a title="Add to Cart" ng-if="data.owner.id!=user.id" ng-click="addTocart(data.id)"><i class="fa fa-plus"></i></a>
                                             <a title="Share to Earn" ng-click="sharetosocial(data)"><i class="fa fa-share"></i></a>
                                         </div>
@@ -193,7 +193,7 @@
                                             </div>
                                         </div>
                                         <div class="card-footer">
-                                            <a title="Add to Wishlist" ng-click="updatewishstatus(data,'event',key)" ng-if="data.owner.id!=user.id"><i class="fa fa-heart" ng-class="{'primary': data.wishstatus == 1}"></i></a>
+                                            <a title="Add to Wishlist" ng-click="updatewishstatus(data,'rental',key)" ng-if="data.owner.id!=user.id"><i class="fa fa-heart" ng-class="{'primary': data.wishstatus == 1}"></i></a>
                                             <a title="Add to Cart" ng-if="data.owner.id!=user.id" ng-click="addTocart(data.id)"><i class="fa fa-plus"></i></a>
                                             <a title="Share to Earn" ng-click="sharetosocial(data)"><i class="fa fa-share"></i></a>
                                         </div>
