--- a/angular/tpl/blocks/desktop/leftmenu.html
+++ b/angular/tpl/blocks/desktop/leftmenu.html
@@ -1,7 +1,7 @@
 <div class="left-sidebar">
     <div class="sidebar-card">
         <h6 class="label-xs">My Total Earning</h6>
-        <span class="font-price">$80,800</span>
+        <span class="font-price">${{user.experiencepoints}}</span>
     </div>
 
     <label class="custom-toggle" for="switch-toggle">
