--- a/angular/tpl/desktop/feedchat.html
+++ b/angular/tpl/desktop/feedchat.html
@@ -80,12 +80,12 @@
                     <div class="message-head">
                         <h2>Feed Discussions</h2>
                         <div class="option">
-                            <img ng-src="{{IMGURL}}{{feedchat.user.avatar}}" popover-trigger="mouseenter" popover={{feedchat.user.username}} />
-                            <img ng-src="{{IMGURL}}{{feedData.owner.avatar}}" popover-trigger="mouseenter" popover={{feedData.owner.username}} />
+                            <img ng-src="{{IMGURL}}{{feedchat.user.avatar}}" tooltip-html="feedchat.user.username" tooltip-append-to-body="true" tooltip-placement="top">
+                            <img ng-src="{{IMGURL}}{{feedData.owner.avatar}}" tooltip-html="feedData.owner.username" tooltip-append-to-body="true" tooltip-placement="top">
                         </div>
                     </div>
 
-                    <div class="messenger" scroll-to-bottom="chatData">
+                    <div class="messenger private-chat" scroll-to-bottom="chatData">
 
                         <div class="message-wrap" ng-repeat="message in chatData">
                             <div class="message" ng-class="{ 'me' : user.id == message.user_id , 'option-content' : message.isfile }">
@@ -105,10 +105,10 @@
                     <div class="sender">
                         <div class="msg-text">
                             <a class="small-btn"><i class="fa fa-smile-o"></i></a>
-                            <input type="text" placeholder="Send something..." ng-model="chatMessage.message" my-enter="sendPrivateReplymessage()" id="emojionearea">
+                            <input type="text" placeholder="Send something..." ng-model="chatMessage.message" my-enter="sendReplymessage()" id="emojionearea">
                             <a class="small-btn" ngf-select ngf-drop ngf-multiple="false" ngf-accept="'image/*'" ngf-capture="capture" ngf-allow-dir="allowDir" class="drop-box1" ngf-drop-available="dropAvailable" ngf-change="senduserchatattachment($files);"><i class="fa fa-paperclip"></i></a>
                         </div>
-                        <div class="chat-btn" ng-click="sendPrivateReplymessage()"><i class="fa fa-send"></i></div>
+                        <div class="chat-btn" ng-click="sendReplymessage()"><i class="fa fa-send"></i></div>
                     </div>
                 </div>
             </div>
