modal update and li update

--- a/angular/tpl/blocks/modals/productModal.html
+++ b/angular/tpl/blocks/modals/productModal.html
@@ -5,7 +5,7 @@
         <div class="custom-modal-title modal-default">
             <div class="row flex-center">
                 <div class="col-lg-4 col-md-4">
-                    <h3><i class="fa fa-bolt"></i> New Post</h3>
+                    <h3>New Post</h3>
                 </div>
                 <div class="col-lg-4 col-md-4 ml-15 flex-center">
                     <div class="dropdown-label">Category</div>
