--- a/angular/tpl/blocks/modals/todoModal.html
+++ b/angular/tpl/blocks/modals/todoModal.html
@@ -6,7 +6,7 @@
         <div class="custom-modal-title modal-orange">
             <div class="row flex-center">
                 <div class="col-lg-4 col-md-4">
-                    <h3><i class="fa fa-tasks"></i> Todo</h3>
+                    <h3>Todo</h3>
                 </div>
                 <div class="col-lg-4 col-md-4 ml-15">
                     <div class="dropdown-label">Type</div>
