--- a/angular/tpl/blocks/modals/requestModal.html
+++ b/angular/tpl/blocks/modals/requestModal.html
@@ -5,7 +5,7 @@
         <div class="custom-modal-title modal-green">
             <div class="row flex-center">
                 <div class="col-lg-4 col-md-4">
-                    <h3><i class="fa fa-bolt"></i> REQUEST FOR SERVICES</h3>
+                    <h3>REQUEST FOR SERVICES</h3>
                 </div>
                 <div class="col-lg-4 col-md-4 ml-15 flex-center">
                     <div class="dropdown-label">Type Of Service</div>
