--- a/angular/tpl/blocks/desktop/rightmenu.html
+++ b/angular/tpl/blocks/desktop/rightmenu.html
@@ -349,8 +349,7 @@
                     <div class="msg-top" ng-if="viewData.ownerproducts.length > 0">
                         <h5 class="msg-title"><img src="../assets/img/other-work.png" /> Other Works</h5>
                         <ul>
-                            <li ng-repeat="(key,data) in viewData.ownerproducts | limitTo: 2">
-                                <img ng-src="{{data.images[0].filetype == 1 ? IMGURL : ''}}{{data.images[0].thumbnail}}">
+                            <li ng-repeat="(key,data) in viewData.ownerproducts | limitTo: 2" background-image="{{data.images[0].filetype == 1 ? IMGURL : ''}}{{data.images[0].thumbnail}}">
                             </li>
                         </ul>
                     </div>
